Added missing alloca.c.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,7 @@
-# $Id: Makefile.am,v 1.5 2000-01-13 18:33:01 rug Exp $ 
+# $Id: Makefile.am,v 1.6 2000-01-27 06:37:11 rug Exp $ 
 AUTOMAKE_OPTIONS = no-dependencies
 
-EXTRA_DIST = memcmp.c strcspn.c vsnprintf.c memmove.c strncasecmp.c \
+EXTRA_DIST = alloca.c memcmp.c strcspn.c vsnprintf.c memmove.c strncasecmp.c \
 	     memset.c strcasecmp.c strstr.c system.h easy-vsnprintf.c
 
 noinst_LIBRARIES = libnmzut.a
