--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.86 2000-01-27 00:30:25 satoru Exp $
+dnl $Id: configure.in,v 1.87 2000-01-27 12:50:58 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -18,10 +18,18 @@ AM_INIT_AUTOMAKE(namazu, 1.9.14)
 AM_MAINTAINER_MODE
 
 dnl *
-dnl * Namazu's website URL
+dnl * Namazu Website
 dnl * 
 OPT_NMZ_URI="http://openlab.ring.gr.jp/namazu/"
 AC_SUBST(OPT_NMZ_URI)
+
+dnl *
+dnl * Namazu Copyright
+dnl * 
+COPYRIGHT="Copyright (C) 2000 Namazu Project All rights reserved."
+AC_SUBST(COPYRIGHT)
+AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
+
 
 dnl *
 dnl * libtool
