--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,6 +1,6 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.4 2000-01-27 12:51:01 satoru Exp $
-# Copyright (C) 1997-2000 Satoru Takabayashi  All rights reserved.
+# $Id: var.pl.in,v 1.5 2000-01-27 13:13:39 satoru Exp $
+# Copyright (C) 2000 Namazu Project All rights reserved..
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
