--- a/scripts/mknmz.pl.in
+++ b/scripts/mknmz.pl.in
@@ -1,9 +1,9 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.13 2000-01-27 07:35:20 satoru Exp $
+# $Id: mknmz.pl.in,v 1.14 2000-01-27 13:13:42 satoru Exp $
 #
-# Copyright (C) 1997-2000 Satoru Takabayashi  All rights reserved.
+# Copyright (C) 2000 Namazu Project All rights reserved..
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
