--- a/template/NMZ.foot.ja.in
+++ b/template/NMZ.foot.ja.in
@@ -5,7 +5,9 @@
 によって構築されています。
 </p>
 <address>
+<!-- ADDRESS -->
 <a href="mailto:@OPT_ADMIN_EMAIL@">@OPT_ADMIN_EMAIL@</a>
+<!-- ADDRESS -->
 </address>
 </body>
 </html>
