--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.90 2000-01-28 07:36:22 satoru Exp $
+dnl $Id: configure.in,v 1.91 2000-01-28 09:40:08 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -33,7 +33,8 @@ AC_DEFINE_UNQUOTED(MAILING_ADDRESS, "$MAILING_ADDRESS")
 dnl *
 dnl * Namazu Copyright.
 dnl * 
-COPYRIGHT="Copyright (C) 2000 Namazu Project All rights reserved."
+COPYRIGHT="Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.\n\
+Copyright (C) 2000 Namazu Project All rights reserved."
 AC_SUBST(COPYRIGHT)
 AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
 
