--- a/scripts/mknmz.pl.in
+++ b/scripts/mknmz.pl.in
@@ -1,9 +1,10 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.16 2000-01-28 07:02:19 satoru Exp $
+# $Id: mknmz.pl.in,v 1.17 2000-01-28 09:40:19 satoru Exp $
 #
-# Copyright (C) 2000 Namazu Project All rights reserved..
+# Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
+# Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
