--- a/pl/gettext.pl.in
+++ b/pl/gettext.pl.in
@@ -105,4 +105,12 @@ sub _
     defined $_{$_[0]} ? $_{$_[0]} : $_[0];
 }
 
+## ------------------------------------------------------------ ##
+## Dummy function.                                              ##
+## ------------------------------------------------------------ ##
+sub N_
+{
+    return $_[0];
+}
+
 1;
