--- a/scripts/mknmz.pl.in
+++ b/scripts/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.19 2000-01-29 02:33:44 satoru Exp $
+# $Id: mknmz.pl.in,v 1.20 2000-01-29 04:58:23 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -73,7 +73,7 @@ sub main () {
     setup_magic();
     load_modules();
     my ($output_dir, @targets) = parse_options();
-    read_config();
+    load_rcfiles();
     my $file_base = prep($output_dir, @targets);
     load_olemodules() if ($var::Opt{'ole'});
 
@@ -138,7 +138,18 @@ sub main () {
     exit 0;
 }
 
-sub read_config () {
+# 
+# Load mknmzrcs:
+# 
+#  1. $(sysconfdir)/$(PACKAGE)/mknmzrc
+# 
+#  2. ~/.mknmzrc
+# 
+#  3. user-specified mknmzrc set by mknmz --config=file option.
+# 
+# If multiple files exists, read all of them.
+# 
+sub load_rcfiles () {
     my (@cand) = ();
     my (@vprint) = (); # only for neat output when vprint requested.
     push @cand, "$CONFDIR/mknmzrc";
@@ -877,7 +888,7 @@ sub parse_options ()
 
     if ($opt_show_config) {
 	load_olemodules() if ($var::Opt{'ole'});
-	read_config();
+	load_rcfiles();
 	show_config();
 	exit 1;
     }
