--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.20 2000-01-29 04:58:23 satoru Exp $
+# $Id: mknmz.in,v 1.1 2000-01-30 22:42:31 rug Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -42,10 +42,10 @@ $SYSTEM = $^O;
 
 $LANG = "C";                # language of messages
 my $CCS = "euc";
-my $CONFDIR       = "%CONFDIR%";     # directory where mknmzrc are in.
-my $LIBDIR        = "%LIBDIR%";      # directory where library etc. are in.
-my $FILTERDIR     = "%FILTERDIR%";   # directory where filters are in.
-my $TEMPLATEDIR   = "%TEMPLATEDIR%"; # directory where templates are in.
+my $CONFDIR       = "@CONFDIR@";     # directory where mknmzrc are in.
+my $LIBDIR        = "@PERLLIBDIR@";      # directory where library etc. are in.
+my $FILTERDIR     = "@FILTERDIR@";   # directory where filters are in.
+my $TEMPLATEDIR   = "@TEMPLATEDIR@"; # directory where templates are in.
 
 my $DeletedFilesCount = 0;
 my $UpdatedFilesCount = 0;
